fixing page overflow to limit resize events

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,12 @@
 html, body {
+    position: relative;
 	width: 100%;
 	height: 100%;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 95%;
 	line-height: 160%;
-	background-color: @white;
+	background-color: #fff;
+    overflow-y: hidden;
 }
 
 #main {
@@ -12,7 +14,7 @@ html, body {
 	top: 60px;
 	width: 100%;
 	height: 100%;
-	color: @black;
+	color: #000;
 	background-color: #fff;	
 	padding: 0;
 	z-index: 99;
